# surgical-ai

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: gradio_demo.py
configs/: benchmark.yaml  cvs_classifier.yaml  segmentation.yaml
configs/data/: cholecseg8k.yaml  endoscapes2023.yaml  endoscapes2023_seg.yaml  joint_seg.yaml
configs/eval/: benchmark.yaml
configs/model/: sam2_lora.yaml  sam2_temporal.yaml  unet_baseline.yaml
configs/train/: cvs_classifier.yaml  segmentation.yaml
docs/: RESEARCH_DIRECTION.md
notebooks/: 00_prepare_data.ipynb  01_data_exploration.ipynb  01_eda_cholecseg8k.ipynb  02_baseline_unet.ipynb  02_class_imbalance_analysis.ipynb  03_sam2_zero_shot_eval.ipynb  03_sam2_zeroshot.ipynb  04_sam2_lora.ipynb  05_cvs_classifier.ipynb  06_smoke_test.ipynb  07_results_visualization.ipynb  08_pretrain_validation.ipynb  09_endoscapes_seg_training.ipynb  run_pipeline.ipynb
scripts/: colab_setup.sh  download_cholecseg8k.sh  download_endoscapes.sh  prepare_endoscapes.sh
src/data/: cholecseg8k.py  class_balance.py  copy_paste.py  endoscapes.py  endoscapes_seg.py  joint_seg.py  transforms.py
src/eval/: benchmark_runner.py  metrics.py
src/inference/: pipeline.py
src/losses/: dice.py  focal.py  tversky.py  (+1 more)
tests/: conftest.py  test_benchmark.py  test_copy_paste.py  test_data_loaders.py  test_endoscapes_seg.py  test_inference.py  test_joint_seg.py  test_losses.py  test_metrics.py  test_model_shapes.py  test_partial_label_loss.py  test_train_factory.py
(+11 files in other folders)
